manifests/01-dep-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2026-08-15T03:58:50Z"
  generation: 1
  labels:
    app: dep-webapp
  name: dep-webapp
  namespace: default
  resourceVersion: "139425"
  uid: a0973cd8-d68b-4ab7-890d-d6c910370fe9
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dep-webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dep-webapp
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
