manifests/nginx-preferred.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: pod-5
  labels:
    tier: frontend
    app: "webapp"

spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
              - key: disk
                operator: In 
                values:
                  - ssd 

          weight: 100
      


  resources:
      requests:
        cpu: "512m"
        memory: "1Gi"
      limits:
       cpu: "512m"
       memory: "1Gi"

  containers:
    - name: pod-5-container
      image: nginx
