manifests/nginx-required.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: pod-5
  labels:
    tier: frontend
    app: "webapp"
spec:
  
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: disk
                operator: DoesNotExist  
                #values:
                  #- ssd 
  resources:
      requests:
        cpu: "512m"
        memory: "1Gi"
      limits:
       cpu: "512m"
       memory: "1Gi"

  containers:
    - name: pod-5-container
      image: nginx
