manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: hom
  name: pod-1
  labels:
    tier: frontend
    app: "webapp"

spec:
  serviceAccount: webapp-sa
  resources:
      requests:
        cpu: "512m"
        memory: "1Gi"
      limits:
       cpu: "512m"
       memory: "1Gi"
  
  containers:
    - name: pod-1-container
      image: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-content

  volumes:
    - name: web-content
      emptyDir: {}
