manifests/01-svc-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30010
  selector:
    app: dep-webapp
