manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      #nodePort: 30010
  selector:
    app: webapp
