manifests/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-nfs
            port:
              number: 80

      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: nginx-prod-nfs
            port:
              number: 80
